# scholarly

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  docker-compose.yml  tables.sql
src/: component.h  db.cpp  db.h  main.cpp  sql_editor.cpp  sql_editor.h  state.h  student_tab.cpp  student_tab.h  students_list.cpp  students_list.h  tab_bar.cpp  tab_bar.h  table.cpp  table.h  utils.cpp  utils.h
src/components/: list.cpp  list.h
src/tabs/: sql_editor.cpp  sql_editor.h  student.cpp  student.h  students_list.cpp  students_list.h
